<resources>
    <string name="app_name">Guess the Number</string>
    <string name="main_text">Just do it!</string>
    <string name="btn_start">Start game</string>
    <string name="btn_results">Results</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_try_again">Try again</string>
    <string name="player_name_settings_l">Player name:</string>
    <string name="player_name_settings_i">Name</string>
    <string name="player_age_settings_l">Player age:</string>
    <string name="player_age_settings_i">10</string>
    <string name="sound_settings_l">Sound</string>
    <string name="btn_about">About</string>
    <string name="text_about">About me</string>
    <string name="text_author">Giedrius Stankevičius IFF-7/3</string>
    <string name="save_btn">Save</string>
    <string name="create_btn">Create</string>
    <string name="submit_btn">Submit</string>
    <string name="number_input">0</string>
    <string name="game_level">Difficulty:</string>
    <string-array name="difficulty_values">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="number_range">Range</string>
    <string name="number_range_format">Guess a number in range %d to %d</string>
    <string name="number_guessed">Guessed number was ...</string>
    <string name="turns_format">Turn %d of %d</string>
    <string name="your_chance">You have</string>
    <string name="result_format">Guessed number was %d and it was too %s</string>
    <string name="result_high_format">high</string>
    <string name="result_low_format">low</string>
    <string name="result_header">Results:</string>
    <string name="result_content">%s: won %d/lost %d.</string>
    <string name="nickName">Player %s</string>
    <string name="empty_Field">Empty field</string>
    <string name="gameOver_win">You won!</string>
    <string name="gameOver_result">Last your guess was %d but it was %d!</string>
    <string name="gameOver_greeting">You are a star!</string>
    <string name="gameOver_loose">You lost! Try again!</string>
    <string name="level_format">Congratulations, you have reached level %d!</string>
    <string name="choose_player">You can choose a player or create new</string>

</resources>
