<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:layout_gravity="center"
    android:background="@drawable/number14"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/setNameL"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="@color/whiteTransparent"
        android:gravity="center|start"
        android:text="@string/player_name_settings_l"
        android:textColor="@color/TextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/NameInp"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AgeL"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/whiteTransparent"
        android:gravity="center|start"
        android:text="@string/player_age_settings_l"
        android:textColor="@color/TextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/ageInp"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setNameL" />

    <EditText
        android:id="@+id/NameInp"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="36dp"
        android:background="@color/whiteTransparent"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/player_name_settings_i"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/player_name_settings_i"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Switch
        android:id="@+id/soundSettings"
        android:layout_width="84dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:background="@color/whiteTransparent"
        android:checked="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageInp" />

    <Button
        android:id="@+id/SaveSetting"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor"
        android:onClick="saveSetting"
        android:text="@string/save_btn"
        android:textColor="@color/TextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SoundsDifficulty"
        app:layout_constraintVertical_bias="0.325" />

    <Spinner
        android:id="@+id/SoundsDifficulty"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:background="@color/whiteTransparent"
        android:entries="@array/difficulty_values"
        android:gravity="center"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/settings_level"
        app:layout_constraintTop_toBottomOf="@+id/soundSettings" />

    <TextView
        android:id="@+id/soundL"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/whiteTransparent"
        android:gravity="center|start"
        android:text="@string/sound_settings_l"
        android:textColor="@color/TextColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_level"
        app:layout_constraintEnd_toStartOf="@+id/soundSettings"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeL"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ageInp"
        android:layout_width="84dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:background="@color/whiteTransparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/player_age_settings_i"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/player_age_settings_i"
        android:textColor="@color/TextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameInp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/settings_level"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="212dp"
        android:background="@color/whiteTransparent"
        android:gravity="center|start"
        android:text="@string/game_level"
        android:textColor="@color/TextColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
