<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/numbers"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/header"
            android:layout_width="188dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#BC48C2AE"
            android:fontFamily="@font/allan"
            android:gravity="center"
            android:text="@string/main_text"
            android:textAlignment="center"
            android:textColor="#E9FFEB3B"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095" />

        <Button
            android:id="@+id/start_btn"

            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/buttonColor"
            android:onClick="startClick"
            android:text="@string/btn_start"
            android:textColor="@color/TextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/result_btn"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#EB48C2AE"
            android:onClick="startClick"
            android:text="@string/btn_results"
            android:textColor="@color/TextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_btn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#E9FFEB3B"
            android:onClick="startClick"
            android:text="@string/btn_settings"
            android:textColor="@color/TextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_btn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#E9FFEB3B"
            android:onClick="startClick"
            android:text="@string/btn_about"
            android:textColor="@color/TextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_btn"
            app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>